Initial commin with infrustructure

--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,151 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>org.intive</groupId>
     <artifactId>intive</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>3.7.0</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/RunCucumberTestsInParallel.java</include>
+                    </includes>
+                    <parallel>methods</parallel>
+                    <properties>
+                        <property>
+                            <name>dataproviderthreadcount</name>
+                            <value>${testsThreadNumber}</value>
+                        </property>
+                    </properties>
+                    <useUnlimitedThreads>true</useUnlimitedThreads>
+                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>2.22.0</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <configLocation>src/test/resources/google-styles-without-javadoc.xml</configLocation>
+                </configuration>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <consoleOutput>true</consoleOutput>
+                            <encoding>UTF-8</encoding>
+                            <failsOnError>false</failsOnError>
+                        </configuration>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                    </execution>
+                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>3.1.0</version>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <artifactId>rest-assured</artifactId>
+            <groupId>io.rest-assured</groupId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <artifactId>testng</artifactId>
+            <groupId>org.testng</groupId>
+            <version>7.1.0</version>
+        </dependency>
+        <dependency>
+            <artifactId>slf4j-api</artifactId>
+            <groupId>org.slf4j</groupId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <artifactId>slf4j-log4j12</artifactId>
+            <groupId>org.slf4j</groupId>
+            <scope>test</scope>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <artifactId>log4j</artifactId>
+            <groupId>log4j</groupId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <artifactId>cucumber-java</artifactId>
+            <groupId>io.cucumber</groupId>
+            <version>4.7.4</version>
+        </dependency>
+        <dependency>
+            <artifactId>cucumber-testng</artifactId>
+            <groupId>io.cucumber</groupId>
+            <version>4.7.4</version>
+        </dependency>
+        <dependency>
+            <artifactId>json</artifactId>
+            <groupId>org.json</groupId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
+            <artifactId>jsoup</artifactId>
+            <groupId>org.jsoup</groupId>
+            <version>1.11.3</version>
+        </dependency>
+        <dependency>
+            <artifactId>owner</artifactId>
+            <groupId>org.aeonbits.owner</groupId>
+            <version>1.0.4</version>
+        </dependency>
+        <dependency>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <groupId>io.cucumber</groupId>
+            <scope>test</scope>
+            <version>6.1.1</version>
+        </dependency>
+        <dependency>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <version>2.9.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.53.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>4.0.0-alpha-1</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <cucumberRunner>RunCucumberTestsInParallel</cucumberRunner>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <testsThreadNumber>5</testsThreadNumber>
     </properties>
 
 </project>
