--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
             <artifactId>selenium-firefox-driver</artifactId>
             <version>4.0.0-alpha-1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
