git ignore file were created and guava lib were updated

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,3 +1,4 @@
 mainPage=https://bulbapedia.bulbagarden.net/wiki/Main_Page
 testRunType=regular
 browser=Firefox
+pokemonsListPage=https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_name#Y
