--- a/src/main/resources/qa.properties
+++ b/src/main/resources/qa.properties
@@ -2,3 +2,4 @@ mainPage=https://bulbapedia.bulbagarden.net/wiki/Main_Page
 testRunType=regular
 browser=Firefox
 pokemonsListPage=https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_name#Y
+apiBaseHost=https://pokeapi.co/api/v2/
